--- a/assignments-master/package.json
+++ b/assignments-master/package.json
@@ -4,6 +4,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "supertest": "^6.3.3"
+    "jsonwebtoken": "^9.0.2",
+    "supertest": "^6.3.3",
+    "zod": "^3.22.4"
   }
 }
